--- a/app/src/main/res/layout/fragment_summary.xml
+++ b/app/src/main/res/layout/fragment_summary.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
      Copyright (C) 2020 The Android Open Source Project
 
      Licensed under the Apache License, Version 2.0 (the "License");
@@ -17,7 +16,8 @@
 <!-- Layout for order summary -->
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".SummaryFragment">
+    tools:context=".SummaryFragment"
+    >
 
     <data>
 
@@ -31,13 +31,15 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        >
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:padding="@dimen/side_margin">
+            android:padding="@dimen/side_margin"
+            >
 
             <!-- Group the order details into a single ViewGroup and set focusable = true,
                  so all fields will be read aloud together by the accessibility service -->
@@ -45,8 +47,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:focusable="true"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                >
 
+                <!-- Quantity -->
                 <TextView
                     android:id="@+id/quantity_label"
                     style="@style/Widget.Cupcake.TextView.OrderSummary"
@@ -54,7 +58,8 @@
                     android:layout_height="wrap_content"
                     android:text="@string/quantity"
                     android:textAllCaps="true"
-                    android:textStyle="normal" />
+                    android:textStyle="normal"
+                    />
 
                 <TextView
                     android:id="@+id/quantity"
@@ -62,7 +67,9 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/order_summary_margin"
-                    tools:text="6 cupcakes" />
+                    android:text="@{viewModel.quantity.toString()}"
+                    tools:text="6 cupcakes"
+                    />
 
                 <View
                     android:id="@+id/divider1"
@@ -70,14 +77,17 @@
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
                     android:layout_marginTop="@dimen/side_margin"
-                    android:layout_marginBottom="@dimen/side_margin" />
+                    android:layout_marginBottom="@dimen/side_margin"
+                    />
 
+                <!-- Flavor -->
                 <TextView
                     android:id="@+id/flavor_label"
                     style="@style/Widget.Cupcake.TextView.Label"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/flavor" />
+                    android:text="@string/flavor"
+                    />
 
                 <TextView
                     android:id="@+id/flavor"
@@ -85,7 +95,9 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/order_summary_margin"
-                    tools:text="Chocolate" />
+                    android:text="@{viewModel.flavor}"
+                    tools:text="Chocolate"
+                    />
 
                 <View
                     android:id="@+id/divider2"
@@ -93,14 +105,17 @@
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
                     android:layout_marginTop="@dimen/side_margin"
-                    android:layout_marginBottom="@dimen/side_margin" />
+                    android:layout_marginBottom="@dimen/side_margin"
+                    />
 
+                <!-- Pickup Date -->
                 <TextView
                     android:id="@+id/pickup_label"
                     style="@style/Widget.Cupcake.TextView.Label"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/pickup_date" />
+                    android:text="@string/pickup_date"
+                    />
 
                 <TextView
                     android:id="@+id/date"
@@ -108,7 +123,9 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/order_summary_margin"
-                    tools:text="Sunday" />
+                    android:text="@{viewModel.date}"
+                    tools:text="Sunday"
+                    />
 
                 <View
                     android:id="@+id/divider3"
@@ -116,7 +133,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
                     android:layout_marginTop="@dimen/side_margin"
-                    android:layout_marginBottom="@dimen/margin_between_elements" />
+                    android:layout_marginBottom="@dimen/margin_between_elements"
+                    />
 
                 <TextView
                     android:id="@+id/total"
@@ -125,7 +143,8 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="end"
                     android:layout_marginTop="@dimen/side_margin"
-                    tools:text="Total $5.00" />
+                    tools:text="Total $5.00"
+                    />
 
             </LinearLayout>
 
@@ -134,7 +153,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/side_margin"
-                android:text="@string/send" />
+                android:text="@string/send"
+                />
 
         </LinearLayout>
     </ScrollView>
