--- a/app/src/main/res/layout/fragment_start.xml
+++ b/app/src/main/res/layout/fragment_start.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
      Copyright (C) 2020 The Android Open Source Project
 
      Licensed under the Apache License, Version 2.0 (the "License");
@@ -18,17 +17,29 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".StartFragment">
+    tools:context=".StartFragment"
+    >
+
+    <data>
+
+        <variable
+            name="startFragment"
+            type="com.example.cupcake.StartFragment"
+            />
+
+    </data>
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        >
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:padding="@dimen/side_margin">
+            android:padding="@dimen/side_margin"
+            >
 
             <ImageView
                 android:layout_width="@dimen/image_size"
@@ -37,7 +48,8 @@
                 android:layout_marginTop="@dimen/margin_between_elements"
                 android:importantForAccessibility="no"
                 android:scaleType="center"
-                app:srcCompat="@drawable/cupcake" />
+                app:srcCompat="@drawable/cupcake"
+                />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -46,7 +58,8 @@
                 android:layout_marginBottom="@dimen/side_margin"
                 android:text="@string/order_cupcakes"
                 android:textAppearance="?attr/textAppearanceHeadline4"
-                android:textColor="@color/material_on_background_emphasis_medium" />
+                android:textColor="@color/material_on_background_emphasis_medium"
+                />
 
             <Button
                 android:id="@+id/order_one_cupcake"
@@ -55,7 +68,9 @@
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="@dimen/margin_between_elements"
                 android:minWidth="@dimen/order_cupcake_button_width"
-                android:text="@string/one_cupcake" />
+                android:onClick="@{() -> startFragment.orderCupcake(1)}"
+                android:text="@string/one_cupcake"
+                />
 
             <Button
                 android:id="@+id/order_six_cupcakes"
@@ -64,7 +79,9 @@
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="@dimen/margin_between_elements"
                 android:minWidth="@dimen/order_cupcake_button_width"
-                android:text="@string/six_cupcakes" />
+                android:onClick="@{() -> startFragment.orderCupcake(6)}"
+                android:text="@string/six_cupcakes"
+                />
 
             <Button
                 android:id="@+id/order_twelve_cupcakes"
@@ -73,7 +90,9 @@
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="@dimen/margin_between_elements"
                 android:minWidth="@dimen/order_cupcake_button_width"
-                android:text="@string/twelve_cupcakes" />
+                android:onClick="@{() -> startFragment.orderCupcake(12)}"
+                android:text="@string/twelve_cupcakes"
+                />
         </LinearLayout>
     </ScrollView>
 </layout>
