--- a/app/src/main/res/layout/fragment_flavor.xml
+++ b/app/src/main/res/layout/fragment_flavor.xml
@@ -28,6 +28,12 @@
             type="com.example.cupcake.model.OrderViewModel"
             />
 
+        <!-- flavorFragment -->
+        <variable
+            name="flavorFragment"
+            type="com.example.cupcake.FlavorFragment"
+            />
+
     </data>
 
     <ScrollView
@@ -124,6 +130,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/side_margin"
+                android:onClick="@{() -> flavorFragment.goToNextScreen()}"
                 android:text="@string/next"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
