--- a/app/src/main/res/layout/fragment_pickup.xml
+++ b/app/src/main/res/layout/fragment_pickup.xml
@@ -28,6 +28,12 @@
             type="com.example.cupcake.model.OrderViewModel"
             />
 
+        <!-- pickupFragment -->
+        <variable
+            name="pickupFragment"
+            type="com.example.cupcake.PickupFragment"
+            />
+
     </data>
 
     <ScrollView
@@ -121,6 +127,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/side_margin"
+                android:onClick="@{() -> pickupFragment.goToNextScreen()}"
                 android:text="@string/next"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
