--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -42,6 +42,10 @@
             android:id="@+id/action_flavorFragment_to_pickupFragment"
             app:destination="@id/pickupFragment"
             />
+        <action
+            android:id="@+id/action_flavorFragment_to_startFragment"
+            app:destination="@id/startFragment"
+            />
     </fragment>
 
     <fragment
@@ -54,6 +58,10 @@
             android:id="@+id/action_pickupFragment_to_summaryFragment"
             app:destination="@id/summaryFragment"
             />
+        <action
+            android:id="@+id/action_pickupFragment_to_startFragment"
+            app:destination="@id/startFragment"
+            />
     </fragment>
 
     <fragment
@@ -61,5 +69,10 @@
         android:name="com.example.cupcake.SummaryFragment"
         android:label="@string/order_summary"
         tools:layout="@layout/fragment_summary"
-        />
+        >
+        <action
+            android:id="@+id/action_summaryFragment_to_startFragment"
+            app:destination="@id/startFragment"
+            />
+    </fragment>
 </navigation>
