--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -45,6 +45,8 @@
         <action
             android:id="@+id/action_flavorFragment_to_startFragment"
             app:destination="@id/startFragment"
+            app:popUpTo="@id/startFragment"
+            app:popUpToInclusive="true"
             />
     </fragment>
 
@@ -61,6 +63,8 @@
         <action
             android:id="@+id/action_pickupFragment_to_startFragment"
             app:destination="@id/startFragment"
+            app:popUpTo="@id/startFragment"
+            app:popUpToInclusive="true"
             />
     </fragment>
 
@@ -73,6 +77,8 @@
         <action
             android:id="@+id/action_summaryFragment_to_startFragment"
             app:destination="@id/startFragment"
+            app:popUpTo="@id/startFragment"
+            app:popUpToInclusive="true"
             />
     </fragment>
 </navigation>
